[tool.poetry]
name = "cadcad"
version = "0.5.0"
description = "Design, test and validate complex systems through simulation. Reference Implementation."
authors = [
    "Emanuel Lima <emanuel@block.science>",
    "Tyler Mace <tyler@blocksciencelabs.com>",
    "Michael Zargham <zargham@block.science>",
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pydocstyle = "*"
pylint = "*"

[tool.black]
indent_width = 4
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.flake8]
extend-ignore = "E203"
max-line-length = 100

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
